# gccrowther.github.io

./: .gitignore  Manifest.toml  Project.toml  README.md  plot_test_post.html  pyproject.toml
_notebooks/: 2025-01-15-HiddenCode.ipynb  2025-01-27-GravitySimulation.ipynb  Untitled.ipynb  dummy.py  gravity_sim.jl  gravity_sim_single_core.jl  gravity_simulation.jl
_notebooks/.virtual_documents/: Untitled.ipynb
_posts/: 2025-01-15-HiddenCode.html  2025-01-15-welcome-to-jekyll.markdown
