[project]
name = "gccrowther-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask-expr>=1.1.21",
    "datashader>=0.16.3",
    "holoviews>=1.20.0",
    "jupyterlab>=4.3.4",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pyparsing>=3.2.1",
    "scipy>=1.15.1",
]
